--- a/package.json
+++ b/package.json
@@ -28,8 +28,13 @@
     "react-sortablejs": "^6.1.4",
     "react-spinners": "^0.13.8",
     "react-sweetalert2": "^0.5.2",
+    "rxjs": "^7.8.1",
     "sortablejs": "^1.15.0",
     "tailwindcss": "^3.3.1",
     "yarn": "^1.22.19"
+  },
+  "devDependencies": {
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "2.8.8"
   }
 }
